Fix: change div back to section on history page. alter padding on heading bottpm to make sure no gap on 320px screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 /* Header */
 header {
     background-color: rgb(161, 104, 104);
-    padding: 8.25% 1rem;
+    padding: 8.5% 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
@@ -85,6 +85,7 @@ main {
     width: 100%;
     background: url('../images/morning salutation.jpg') no-repeat center center/cover;
     position: relative;
+    
 
 }
 
@@ -425,24 +426,26 @@ h3 {
     }
 
     #history {
-        margin-top: 60px;
-        height: 90vh;
+       margin-top: 60px;
+        height: 100vh;
         width: 50%;
     }
 
     #what {
         margin-top: 60px;
         width: 50%;
-        height: 90vh;
+        height: 100vh;
     }
 
     #what p {
         font-size: 24px;
     }
     #jphistory {
-        background: url('../images/jphistory.png') no-repeat center center;
-        height: 80vh;
-        width: 100%;       
+        background: url('../images/jphistory.png') no-repeat center top;
+        height: 50vh;
+        width: 100%;  
+         margin-top: 50px;
+        
         }
 
     #joinus {
